# rtrace

./: .gitignore  Cargo.toml
src/: bvh.rs  components.rs  lib.rs  main.rs  model_io.rs  scene.rs  scene_components.rs  shading.rs  trace.rs  trace_utils.rs  utils.rs
