[package]
name = "rtrace"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = {version = "0.15.0", features = ["serde-serialize"] }
rand = {version = "0.8.4", features = ["small_rng"]}
embree = "0.3.7"
image = "0.23.14"
rayon = "1.5.1"
parking_lot = "0.11.2"
serde = {version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
ply-rs = "0.1.3"
linked-hash-map = "0.5.4"

[patch.crates-io]
embree = { path = "../embree" }
